# hacksgiving-2025-dome-dwellers

./: .dockerignore  Plants_Formatted.csv  README.md  data.ipynb  docker-compose.yml  package.json  plants_data.csv  plants_data_clean.csv
.claude/: settings.local.json
Tropical_Dome/: 20251123073000_change_qr_codes_to_species_based.sql
api/: .flake8  .gitignore  Dockerfile  chat_context.txt  dependencies.py  main.py  pyproject.toml  pytest.ini  settings.py
api/databridge/: announcements_databridge.py  base_databridge.py  dome_databridge.py  plants_databridge.py  postgres_databridge.py  scrapbook_databridge.py  supabase_databridge.py  tasks_databridge.py  user_databridge.py
api/engine/: base_engine.py  postgres_engine.py  supabase_engine.py
api/models/: announcements.py  dome.py  inventory.py  plants.py  scrapbook.py  tasks.py  user.py
api/routers/: announcements.py  chat.py  default.py  dome.py  feedback.py  inventory.py  plants.py  qr_admin.py  scrapbook.py  stripe.py  tasks.py  user.py
api/scripts/: knowledge_distillation.ipynb
api/services/: announcements.py  dome.py  inventory.py  plants.py  qr_admin.py  scrapbook.py  stripe.py  tasks.py  user.py
api/utils/: auth.py
app/: .gitignore  README.md  app.json  package-lock.json  package.json
supabase/: config.toml
utils/: README.md  example_usage.sh  generate_csv_exports.py  generate_plant_articles.py  import_plant_articles.py  plant_articles.ipynb  plant_articles.json  plant_articles_old.json  plants_articles.csv  plants_dump.sql  plants_species.csv  pyproject.toml  regenerate_and_upsert.sh  (+2 more)
(+126 files in other folders)
